# bk

./: bk.sln  bk_schema.sql  bkserver.sln
bk-updater/project/: updater.sln  updater.vcxproj  updater.vcxproj.filters
bk-updater/src/: VersionFile.cpp  VersionFile.h  VersionFileList.cpp  VersionFileList.h  VersionInfoList.cpp  VersionInfoList.h  VersionInstaller.cpp  VersionInstaller.h  VersionTmpArchiveFileCache.cpp  VersionTmpArchiveFileCache.h  log.h  resource.h  stdafx.h  updater.aps  updater.cpp  updater.h  updater.rc  updaterDlg.cpp  updaterDlg.h
bk/project/: bk.vcxproj  bk.vcxproj.filters
bk/res/: bk.aps  bk.rc  bk.rc2
bk/src/: App.cpp  App.h  AppServices.cpp  AppServices.h  ChildFrm.cpp  ChildFrm.h  ChildView.cpp  ChildView.h  ContextAccess.cpp  ContextAccess.h  ContextAwareWnd.h  MainFrm.cpp  MainFrm.h  SeasonAccess.cpp  SeasonAccess.h  SessionAwareDialog.cpp  SessionAwareDialog.h  SessionAwareWnd.h  resource.h  stdafx.cpp  stdafx.h
bk/src/PassportSegregation/: BucketEntry.cpp  BucketEntry.h  BucketListCtrl.cpp  BucketListCtrl.h  CowPassport.cpp  CowPassport.h  CrossLayout.cpp  CrossLayout.h  NamedValue.cpp  NamedValue.h  PassportCollection.h  PassportSearchDlg.cpp  PassportSearchDlg.h  PassportSegregationDlg.cpp  PassportSegregationDlg.h  SearchBucket.cpp  SearchBucket.h  SearchBucketSummary.cpp  SearchBucketSummary.h  SegregationBucket.cpp  SegregationBucket.h
bk/src/barcodescanner/: BarcodeScanner.cpp  BarcodeScanner.h  BarcodeScannerObserver.h  BarcodeScannerService.cpp  BarcodeScannerService.h  ScannerConnectionStatus.h  ScannerEventListener.h  oposscanner.cpp  oposscanner.h  symbolscanner.cpp  symbolscanner.h
bk/src/collector/: Collector.cpp  Collector.h  CollectorDeviceStatus.h  CollectorException.h  CollectorServer.cpp  CollectorServer.h  CollectorServerInterface.h  CollectorServerObserver.h  CollectorSession.h  ConnectionException.h  Executor.h  ICollector.h
bk/src/compare/: CowPresenceViewComparator.cpp  CowPresenceViewComparator.h  DataComparator.h  DocComparator.cpp  DocComparator.h  HentComparator.cpp  HentComparator.h  HentsDocComparator.cpp  HentsDocComparator.h  InvoiceViewComparator.cpp  InvoiceViewComparator.h  MemberComparator.h  MoveDocComparator.cpp  MoveDocComparator.h  OwnDocComparator.cpp  OwnDocComparator.h  SeasonComparator.cpp  SeasonComparator.h  SortAttribute.cpp  SortAttribute.h  SortAttributes.cpp  SortAttributes.h
bk/src/content/: AgentsComboContent.cpp  AgentsComboContent.h  AllCowsListContent.cpp  AllCowsListContent.h  BankAccountsComboContent.cpp  BankAccountsComboContent.h  BuyDocsListContent.cpp  BuyDocsListContent.h  BuyInvoicesListContent.cpp  (+53 more)
bkserver/cmake/: CMakeLists.txt
bkserver/project/: bkserver.vcxproj  bkserver.vcxproj.filters
bkserver/src/: BKServer.cpp  BKServer.h  BKService.cpp  BKService.h  BKServiceConstructor.cpp  BKServiceConstructor.h  BKServiceDestructor.cpp  BKServiceDestructor.h  BkLogger.cpp  BkLogger.h  ClientSeasonSession.cpp  ClientSeasonSession.h  ClientSeasonSessionFacade.cpp  ClientSeasonSessionFacade.h  ClientSeasonSessionInterface.h  ClientSession.cpp  ClientSession.h  CowNoReference.cpp  CowNoReference.h  FarmAudience.cpp  FarmAudience.h  FarmSession.cpp  FarmSession.h  FarmSessionBuilder.cpp  FarmSessionBuilder.h  FarmSessionFinalizer.cpp  FarmSessionFinalizer.h  FarmUserContext.h  IFetchHandle.cpp  IFetchHandle.h  InvoiceRelations.cpp  InvoiceRelations.h  Log.cpp  Log.h  SeasonObserver.h  SeasonSession.cpp  SeasonSession.h  SeasonSessionBuilder.cpp  SeasonSessionBuilder.h  SeasonSessionFacade.h  (+16 more)
common/: CommonTypes.h  common_config.h
common/arrays/: DeepDelete.h  Enumerator.h  IdableIndex.h  NewPtrFlushArray.h  SortArray.h  StringIdIndex.h  ptrrange.h
common/compare/: CompareDefs.h  TypesCompare.cpp  TypesCompare.h
common/configuration/: ISetting.h  Setting.cpp  Setting.h
common/data/: DocKey.cpp  DocKey.h  DocType.h  HentType.h  IAgent.h  IBankAccount.h  IBuyDoc.h  IBuyInvoice.h  IClass.h  ICow.h  ICowEntry.h  ICowInvoiceEntry.h  IDoc.h  IFarm.h  IHent.h  IHentsDoc.h  IHerd.h  IIdable.h  IInDoc.h  IInvoice.cpp  IInvoice.h  IInvoiceDeduction.h  IInvoiceHent.h  IMoveDoc.h  IOutDoc.h  IOwnDoc.h  ISeason.h  ISellDoc.h  ISellInvoice.h  IStock.h  IUser.h  InvoiceDirection.h  InvoiceKey.cpp  InvoiceKey.h  InvoiceKind.cpp  InvoiceKind.h  InvoiceType.h  InvoiceTypes.h  Motive.h  PayWay.h  (+1 more)
common/errortoken/: ErrorToken.cpp  ErrorToken.h
common/exception/: TagException.h
common/filesystem/: FileDeleterFinalizer.cpp  FileDeleterFinalizer.h  files.cpp  files.h  paths.cpp  paths.h
common/format/: StringFormat.cpp  StringFormat.h
common/httpdownloader/: ChunkBuffer.cpp  ChunkBuffer.h  DownloadException.cpp  DownloadException.h  DownloadProgress.cpp  DownloadProgress.h  HttpFileGetter.cpp  HttpFileGetter.h  TransferBuffer.cpp  TransferBuffer.h  TransferFile.cpp  TransferFile.h  TransferStream.h  URLBuilder.cpp  URLBuilder.h
common/mustache/: Mustache.cpp  Mustache.h
common/ported/: strptime.cpp  strptime.h
common/progress/: ComplexProgress.h  SafeComplexProgress.cpp  SafeComplexProgress.h  SafeSimpleProgress.cpp  SafeSimpleProgress.h  SimpleProgress.h
common/rockey/: RockeyCommon.h
common/service/: IBKService.h  INotificationPublish.h  TypesRegistration.cpp
common/string/: IntString.cpp  IntString.h  TextUtils.cpp  TextUtils.h  ToString.cpp  ToString.h  Utf8.cpp  Utf8.h
common/types/: CalendarUnit.h  DateRange.cpp  DateRange.h  DateTime.cpp  DateTime.h  Decimal.cpp  Decimal.h  DecimalRange.cpp  DecimalRange.h  GeoCoordinate.cpp  GeoCoordinate.h  IntRange.cpp  IntRange.h  Latitude.cpp  Latitude.h  Longitude.cpp  Longitude.h  NullDecimal.cpp  NullDecimal.h  NullDouble.cpp  NullDouble.h  NullInt.cpp  NullInt.h  NullString.cpp  NullString.h  Nullable.h  Time.cpp  Time.h  string8.cpp  string8.h
common/utils/: BoolUtil.cpp  BoolUtil.h  IdGenerator.cpp  IdGenerator.h  JsonUtils.cpp  JsonUtils.h  Memorandum.h  SafeGet.h  WildcardMatch.cpp  WildcardMatch.h  iif.cpp  iif.h
common/validation/: CowNoValidator.cpp  CowNoValidator.h  HentNoValidator.cpp  HentNoValidator.h
(+1993 files in other folders)
